--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,20 +1,17 @@
-pipeline {
+ipeline {
     agent any
         stages {
-	        stage('Download') {
+	     stage('Download') {
 		           steps {
-			                 git branch: 'ops', url: 'https://github.com/luniemma/JENKINS_REPO.git'
-					            }
-						            } 
-							             stage   ('Build') {
-								                steps{
-										                 sh 'mvn package'
+            git branch: 'ops', url: 'https://github.com/luniemma/JENKINS_REPO.git'
+                         }
+	                 } 
+		 stage   ('Build') {
+	             steps{
+		     sh 'mvn package'
+		   										             }
 												             }
-													             }
-														             stage('Deploy') {
-															                 steps {
-																	                   deploy adapters: [tomcat8(credentialsId: 'dev', path: '', url: 'http://10.0.28.141:8080')], contextPath: 'qaenv', war: '**/*.war'
-																			                   }
+	       stage('Deploy') {
+												              steps {									                   deploy adapters: [tomcat8(credentialsId: 'dev', path: '', url: 'http://10.0.28.141:8080')], contextPath: 'qaenv', war: '**/*.war'																				               }
 																					               }
-																						               }
-																							          }
+																					          }
